# science-journal-graphics-styles

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
.github/workflows/: ci.yaml
funkyfresh/: __init__.py  core.py
funkyfresh/anc/: make_examples.py
funkyfresh/style_sheets/: AAS.mplstyle  AGU.mplstyle  caltech_thesis.mplstyle  personal_whitepaper.mplstyle
